# overhead-time-multiplexing

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: demo_random.yaml  demo_wstate.yaml  demo_wstate_brisbane.yaml
plots/: plot_fig02_fig17.py  plot_fig03.py  plot_fig04_fig05_fig14_fig16_fig18_fig20.py  plot_fig06.py  plot_fig07.py  plot_fig08_fig24.py  plot_fig09.py  plot_fig10.py  plot_fig11.py  plot_fig13.py  plot_fig14.py  plot_fig23.py  plot_mqt_figures.py  plot_settings.py  plot_utils.py  plots.ipynb
results/: 20250807-111625_grid25_mqt_N26880.parquet  20250807-111625_grid25_mqt_config.yaml  20250812-142452_ibm_eagle_127_mqt_N45360.parquet  20250812-142452_ibm_eagle_127_mqt_config.yaml  20250812-172502_grid121_mqt_N43200.parquet  20250812-172502_grid121_mqt_config.yaml  20250822-150625_grid121_mqt_t2_N39690.parquet  20250822-150625_grid121_mqt_t2_config.yaml  20250827-104539_grid121_mqt_t2_select_N39690.parquet  20250827-104539_grid121_mqt_t2_select_config.yaml  20250903-115331_grid121_mqt_tsw_select_N39690.parquet  20250903-115331_grid121_mqt_tsw_select_config.yaml  20260122-133503_grids_random_densities_N880.parquet  20260122-152622_grids_random_densities_N60.parquet  20260122-175216_grids_qft_N600.parquet  20260302-221600_random_gates_5x5_N4800.parquet  20260302-222157_random_gates_11x11_N4200.parquet  20260302-224033_mqt_5x5_N2160.parquet  20260302-224810_mqt_11x11_N2700.parquet  20260303-124631_random_gates_brisbane_N840.parquet  20260303-151441_mqt_brisbane_N2700.parquet  20260303-204352_mqt_brisbane_N540.parquet  20260303-212759_mqt_5x5_N1620.parquet  20260303-215921_mqt_11x11_N540.parquet  20260303-222726_opt_compare_11x11_N1600.parquet  20260303-224851_mqt_layouts_N336.parquet  20260304-122936_mqt_11x11_N540.parquet  20260304-125224_mqt_brisbane_N540.parquet
scripts/: run.py
tests/: test_experiments.py  test_layouts.py  test_overhead_passes.py  test_targets.py
(+33 files in other folders)
